environments/gloo-edge/gateway-api/with-gm-istio/client-app/base/client-parent-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: client-parent-route
  namespace: client
  labels:
    example: client-route
    gateway: https
spec:
  hostnames:
  - "client.edge.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: '*'
          namespace: client
          group: gateway.networking.k8s.io
          kind: HTTPRoute
      matches:
        - path:
            type: PathPrefix
            value: /
